@@ -74,6 +74,7 @@ YOUTRACK
 	Fixed #IP-1279: Autoresponder - Unable to get message body
 	Fixed #IP-1286: IP attachment fails on reboot ( Ubuntu )
 	Fixed #IP-1292: Files from a previous plugin version must be kept if the new plugin version is not compatible
+	Fixed #IP-1314: Custom DNS SRV record - Missing TLS protocol
 
 ------------------------------------------------------------------------------------------------------------------------
 1.2.2
